# mnemo-mcp

./: README.md  pyproject.toml  renovate.json
.gemini/: styleguide.md
.github/workflows/: cd.yml  ci.yml
src/mnemo_mcp/: __main__.py  db.py  server.py
tests/: test_db.py  test_main.py  test_server.py
